# gay-server

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.cargo/: config.toml
src/: main.rs
www/: index.html
